# gradio-on-lambda-aws-bedrock

./: .dockerignore  .gitignore  Dockerfile  README.md  cdk.json  infra.py  pyproject.toml
src/gradio_on_lambda_bedrock_aws/: __init__.py  app.py
